style.css
/*
Theme Name: The Couples Collective
Version: 0.48
Description: Updated site for the Bay Area Couples Collective
Tags: private, static
Author: Angel Damion Robles and CJ Garcia
*/

@font-face {
    font-family: 'Work Sans';
    src: url('../couples-collective/assets/fonts/WorkSans/WorkSans-Regular.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Work Sans Bold';
    src: url('../couples-collective/assets/fonts/WorkSans/WorkSans-Bold.ttf');
    font-weight: normal;
    font-style: normal;
}

@font-face {
    font-family: 'Libre Baskerville Bold';
    src: url('../couples-collective/assets/fonts/LibreBaskerville/LibreBaskerville-Bold.ttf');
    font-weight: normal;
    font-style: normal;
}

:root {
    --font-work-sans-regular: 'Work Sans', sans-serif;
    --font-work-sans-bold: 'Work Sans Bold', sans-serif;
    --font-libre-serif: 'Libre Baskerville Bold', serif;
    --standard-green: #4e8d6b;
    --standard-light-gray: #e0e0e0;
    --standard-gray: #3F4447;
    --standard-purple: #91639B;
    --standard-blue: #145174;
    --standard-red: #CD4F26;
    --standard-black: #1b1c1e;
    --standard-radius: 27px;
    --standard-padding: 156px;
    --laptop-padding: 56px;
    --tablet-padding: 78px;
    --mobile-padding: 16px;
}

html,
body {
    width: 100%;
    height: 100%;
    margin: 0px;
    padding: 0px;
    overflow-x: hidden;
    font-family: var(--font-work-sans-regular);
}

body {
    margin-left: auto;
    margin-right: auto;
}

#media-level::before {
    display: block;
    content: "Desktop";
    color: lightblue;
    font-size: 16px;
    position: fixed;
    top: 0;
    z-index: 5;
    background-color: transparent;
}

.fill-button {
    white-space: nowrap;
    background-color: var(--standard-green);
    border: solid 2px var(--standard-green);
    color: white;
    padding: 7px 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-family: var(--font-work-sans-regular);
    font-size: 14px;
    font-weight: 500;
    border-radius: var(--standard-radius);
    transition: 0.2s;

    &:hover {
        color: var(--standard-green);
        background-color: white;
        /* for transparent text in button */
        /* mix-blend-mode: normal;  */
        transition-timing-function: ease-in-out;
        cursor: pointer;
    }
}


.outline-button {
    white-space: nowrap;
    background-color: transparent;
    border: solid 2px;
    border-color: #FFFFFF;
    color: #FFFFFF;
    padding: 7px 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-family: var(--font-work-sans-regular);
    font-size: 14px;
    border-radius: var(--standard-radius);
    transition: 0.2s;

    &:hover {
        color: white;
        background-color: var(--standard-green);
        transition-timing-function: ease-in-out;
        cursor: pointer;
    }
}

.outline-button-two {
    white-space: nowrap;
    background-color: transparent;
    border: solid 2px;
    border-color: var(--standard-green);
    color: var(--standard-green);
    padding: 7px 20px;
    text-align: center;
    text-decoration: none;
    display: inline-block;
    font-family: var(--font-work-sans-regular);
    font-size: 14px;
    border-radius: var(--standard-radius);
    transition: 0.2s;

    &:hover {
        color: white;
        background-color: var(--standard-green);
        transition-timing-function: ease-in-out;
        cursor: pointer;
    }

}
/* ... */

